--- a/src/components/products.css
+++ b/src/components/products.css
@@ -1,47 +1,55 @@
 /* ProductPage.css */
 .product-page {
-  padding: 2rem;
-  height: 100vh;
-  padding-top: 5rem;
-}
+    padding: 2rem;
+    height: 100vh;
+    padding-top: 4rem;
+  }
+  
+  .sub-title {
+    font-size: 34px;
+    color: #f92626;
+  }
 
-.sub-title {
-  font-size: 34px;
-  color: #f92626;
-}
+  .product-title {
+    font-size: 54px;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+  
+  .product-carousel {
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow-x: auto; /* Change to "auto" instead of "hidden" */
+    scrollbar-width: none; /* Hide scrollbar for cleaner look */
+    -ms-overflow-style: none; /* Hide scrollbar for Microsoft browsers */
+  }
+  
+  .product-cards-wrapper {
+    overflow: hidden; /* Hide the scrollbar but allow content overflow */
+  }
+  
+  .product-cards {
+    display: flex;
+    gap: 2rem; /* Adjust gap as needed */
+    flex-shrink: 0;
+    scroll-snap-type: x mandatory;
+    overflow-x: auto; /* Enable horizontal scrolling */
+    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on iOS */
+    margin-bottom: -20px; /* Add negative margin to counteract margin collapse */
+    padding-bottom: 20px; /* Add padding to create space for scrollbar */
+  }
 
-.product-title {
-  font-size: 54px;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
-.product-carousel {
-  display: flex;
-  align-items: center;
-  position: relative;
-  overflow-x: hidden; /* Change to "hidden" to hide the scrollbar */
-  scrollbar-width: none; /* Hide scrollbar for Firefox */
-  -ms-overflow-style: none; /* Hide scrollbar for Microsoft browsers */
-}
-
-.product-cards {
-  display: flex;
-  gap: 3rem; /* Adjust gap as needed */
-  flex-shrink: 0;
-  scroll-snap-type: x mandatory;
-  overflow-x: auto; /* Enable horizontal scrolling */
-  -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on iOS */
-}
-
-.product-card {
-  flex: 0 0 auto;
-  width: 250px; /* Customize width as needed */
-  scroll-snap-align: start;
-}
-
-/* Rest of the CSS rules... */
-
+  .product-cards::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
+  
+  .product-card {
+    flex: 0 0 auto;
+    width: 250px; /* Customize width as needed */
+    scroll-snap-align: start;
+  }
   
   .left {
     left: 0;
