--- a/src/components/about.css
+++ b/src/components/about.css
@@ -21,4 +21,18 @@
     text-justify: inter-word;
   }
   
+
+/* Adjust margins and padding for responsive layout */
+@media (max-width: 767px) {
+  .about {
+    margin-top: 80vh; /* Decrease the margin on smaller screens */
+    height: auto; /* Remove fixed height for responsiveness */
+    padding: 2rem;
+  }
+
+  .about-text {
+    font-size: 1rem;
+  }
+}
+
   
